<resources>
    <string name="app_name">Proyecto</string>
    <string name="action_settings">Settings</string>
    <string name="reto1">reto1</string>
    <string name="reto3">reto3</string>
    <string name="reto2">reto2</string>
    <string name="reto4">reto4</string>
    <string name="fundacion_celta">¿En que año se fundo el RC Celta?</string>
    <string name="aceptar">aceptar</string>
    <string name="informaci_n">Información</string>
    <string name="saca_una_foto_con_la_camara">Saca una foto de lo celtista que eres</string>
    <string name="foto">foto</string>
    <string name="todo">todo</string>
    <string name="Copas_Depor">Depor*2/12-1=0</string>
    <string name="Pregunta_Depor">Cuantas copas tiene el Depor</string>
    <string name="Sigueme">Sigueme en Instagram</string>
    <string name="confirmar">confirmar</string>
</resources>
